tests/integration/telemetry/envoyfilter/customizemetrics/testdata/bootstrap_patch.yaml
# enable custom tag in the stats
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: bootstrap-tag
  namespace: istio-system
spec:
  configPatches:
    - applyTo: BOOTSTRAP
      patch:
        operation: MERGE
        value:
          stats_config:
            stats_tags:
              - regex: "(custom_dimension=\\.=(.*?);\\.;)"
                tag_name: "custom_dimension"
